--- a/doc/papers/02.2015/src/context.tex
+++ b/doc/papers/02.2015/src/context.tex
@@ -22,9 +22,9 @@ configuring system parameters, network parameters and link bandwidth and delay
 limitations. The previous performance penalty induced by the Mininet
 framework is no longer of concern.
 
-\begin{figure}[h]
+\begin{figure}[H]
   \centering
-  \includegraphics[width=\textwidth]{img/mptcp-openvpn-bare}
+  \includegraphics[width=0.5\textwidth]{img/mptcp-openvpn-bare}
   \caption{New MPTCP testbed}
   \label{fig:testbed}
 \end{figure}
