--- a/doc/slides/02.2015/en/slides.tex
+++ b/doc/slides/02.2015/en/slides.tex
@@ -68,11 +68,13 @@ Popescu\\
   \begin{itemize}
     \item OLIA
     \begin{itemize}
+      \item MPTCP default
       \item coarse-grained
       \item packet loss
     \end{itemize}
     \item wVegas
     \begin{itemize}
+      \item 2014 - based on TCP-Vegas
       \item fine-grained
       \item packet delay
     \end{itemize}
@@ -123,8 +125,9 @@ Popescu\\
 \section{Conclusions}
 \begin{frame}
   \begin{itemize}
-    \item OLIA has improved throughput
-    \item wVegas has stable throughput
+    \item OLIA outperforms wVegas throughput-wise
+    \item wVegas has stable throughput rate
+    \item possible combined approach
   \end{itemize}
 \end{frame}
 
