Add introduction and reorganize sections

--- a/doc/papers/06.2015/my-report.bib
+++ b/doc/papers/06.2015/my-report.bib
@@ -68,6 +68,15 @@
  year = {2014}
 }
 
+@techreport{sem3,
+ author = {Petria, Silviu and Popescu, Silviu},
+ title = {{Comparative Analysis of Congestion Algorithm Influence on OpenVPN-MPTCP Performance}},
+ institution = {Faculty of Automatic Control and Computers, University POLITEHNICA of Bucharest},
+ address = {Splaiul Independenței 313, Bucharest, Romania, 060042},
+ month = {February},
+ year = {2015}
+}
+
 @inproceedings{wvegas,
  author = {Yu Cao and Mingwei Xu and Xiaoming Fu},
  title = {Delay-based Congestion Control for Multipath TCP},
