--- a/doc/papers/06.2015/my-report.tex
+++ b/doc/papers/06.2015/my-report.tex
@@ -40,9 +40,13 @@ Splaiul Independenței 313, Bucharest, Romania, 060042 \\
 \label{sec:introduction}
 \input{src/introduction}
 
-\section{Context}
-\label{sec:context}
-\input{src/context}
+\section{Related Work}
+\label{sec:related}
+\input{src/related}
+
+\section{Setup}
+\label{sec:setup}
+\input{src/setup}
 
 \section{Scenarios and Results}
 \label{sec:results}
