--- a/doc/papers/06.2015/src/abstract.tex
+++ b/doc/papers/06.2015/src/abstract.tex
@@ -1,2 +1,2 @@
 % vim: set tw=78 sts=2 sw=2 ts=8 aw et ai:
-Application users can often find themselves hindered by restrictive firewall conditions or traffic shaping policies enforced by network operators. The goal of this research project is to use Multipath TCP (MPTCP) over OpenVPN in order to tunnel traffic via common protocols, enabling applications to maximize their throughput while bypassing the aforementioned constraints. The previous stages of the project analyzed the impact of link parameters and congestion algorithms on MPTCP performance over OpenVPN in a controlled test environment. In this stage we build a prototype and deploy it in the real world, choosing mobile data networks as a use case. We present our testing methodology and analyze the results.
+Application users can often find themselves hindered by restrictive firewall conditions or traffic shaping policies enforced by network operators. The goal of this research project is to use Multipath TCP (MPTCP) over OpenVPN in order to tunnel traffic via common protocols, enabling applications to maximize their throughput while bypassing the aforementioned constraints. The previous stages of the project analyzed the impact of link parameters and congestion algorithms on MPTCP performance over OpenVPN in a controlled test environment. In this stage we build a prototype and deploy it in the real world, choosing mobile data networks as a use case. We present our prototype, testing methodology and results.
