Add related work + references

--- a/doc/papers/06.2015/my-report.bib
+++ b/doc/papers/06.2015/my-report.bib
@@ -16,6 +16,23 @@
  keywords = {data center, mptcp},
 }
 
+@inproceedings{binder,
+ author = {Boccassi, Luca and Fayed, Marwan M. and Marina, Mahesh K.},
+ title = {Binder: A System to Aggregate Multiple Internet Gateways in Community Networks},
+ booktitle = {Proceedings of the 2013 ACM MobiCom Workshop on Lowest Cost Denominator Networking for Universal Access},
+ series = {LCDNet '13},
+ year = {2013},
+ isbn = {978-1-4503-2365-9},
+ location = {Miami, Florida, USA},
+ pages = {3--8},
+ numpages = {6},
+ url = {http://doi.acm.org/10.1145/2502880.2502894},
+ doi = {10.1145/2502880.2502894},
+ acmid = {2502894},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {MPTCP, challenged networks, gateway aggregation, rural networks},
+} 
 
 @inproceedings{how-hard-can-it-be,
  author = {Raiciu, Costin and Paasch, Christoph and Barre, Sebastien and Ford, Alan and Honda, Michio and Duchene, Fabien and Bonaventure, Olivier and Handley, Mark},
@@ -30,6 +47,14 @@
  acmid = {2228338},
  publisher = {USENIX Association},
  address = {Berkeley, CA, USA},
+}
+
+@inproceedings{goodcop,
+author = {Raiciu, Costin and Olteanu, Vladimir and Stoenescu, Radu},
+title = {{Good Cop, Bad Cop: Forcing Middleboxes to Cooperate}},
+booktitle = {IAB Workshop on Stack Evolution in a Middlebox Internet (SEMI)},
+year = {2015},
+location = {Zurich, Switzerland},
 }
 
 @inproceedings{latencies,
