--- a/doc/papers/06.2015/my-report.bib
+++ b/doc/papers/06.2015/my-report.bib
@@ -16,6 +16,24 @@
  keywords = {data center, mptcp},
 }
 
+@inproceedings{freedns,
+ author = {Peng, Chunyi and Li, Chi-yu and Tu, Guan-Hua and Lu, Songwu and Zhang, Lixia},
+ title = {Mobile Data Charging: New Attacks and Countermeasures},
+ booktitle = {Proceedings of the 2012 ACM Conference on Computer and Communications Security},
+ series = {CCS '12},
+ year = {2012},
+ isbn = {978-1-4503-1651-4},
+ location = {Raleigh, North Carolina, USA},
+ pages = {195--204},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/2382196.2382220},
+ doi = {10.1145/2382196.2382220},
+ acmid = {2382220},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {accounting attacks, cellular networks, mobile data services},
+} 
+
 @inproceedings{binder,
  author = {Boccassi, Luca and Fayed, Marwan M. and Marina, Mahesh K.},
  title = {Binder: A System to Aggregate Multiple Internet Gateways in Community Networks},
