--- a/doc/papers/06.2015/src/setup.tex
+++ b/doc/papers/06.2015/src/setup.tex
@@ -1,1 +1,31 @@
 % vim: set tw=78 sts=2 sw=2 ts=8 aw et ai:
+
+To determine the extent to which there is a use case for ninja tunneling on mobile devices we have performed an analysis of the four major Romanian mobile operators. We investigated whether packet changing middleboxes exist in their networks and whether traffic shaping is applied per port or per application. Table \ref{table:operators} presents our findings. With regards to the filtering of MPTCP options we have determined that all but one operator (Operator 3) employ packet changing middleboxes that remove the MPTCP options from the TCP header, forcing the endpoints to fallback to TCP. Traffic shaping analysis revealed that all operators use policies that rate-limit traffic on port 53. Since many operators offer DNS traffic free of charge \cite{freedns}, we suspect this is an intentional measure meant to thwart savvy users who would attempt to tunnel all of their traffic on port 53, thus avoiding charges completely. Our tests with an OpenVPN tunnel running on port 53 resulted in packet losses of around 70% on the link for all four operators.
+
+Even though Operator 3 does not filter MPTCP in its network, its coverage is the poorest of the four. The throughput values obtained were not viable for our proposed experiments and therefore we have decided to settle on Operator 1. Application analysis for Operator 1 revealed further traffic shaping policies, with Skype calls only working on a data-only subscription - not on voice-plus-data one.
+
+\begin{center}
+    \begin{table}
+    \centering
+    \begin{tabular}{ | l | l | l | }
+    \hline
+    Name & Filters MPTCP & Traffic Shaping \\ \hline
+    Operator 1 & Yes & Port and application  \\ \hline
+    Operator 2 & Yes & Port \\ \hline
+    Operator 3 & No & Port \\ \hline
+    Operator 4 & Yes & Port \\ \hline
+    \end{tabular}
+    \caption{Analysis of the four major Romanian mobile operators. All but one use middleboxes that filter MPTCP options. All perform traffic shaping on certain ports and/or applications. }
+    \label{table:operators}
+    \end{table}
+\end{center}
+
+Our experimental setup consists of a mobile terminal (a Galaxy Nexus I9250 phone running Android 4.4.2 with a custom MPTCP kernel) and an external server with a public IP address which serves as an endpoint for the tunnels. The external machine runs four instances of OpenVPN on ports 1194 (UDP), 1195 (TCP), 53 (DNS) and 80 (HTTP). The prototype is deployed on the phone. It can create tunnels on all four ports over the Operator 1 network. We run periodic tests over different combinations of tunnels and compare the obtained throughput with a baseline value. The tests consist of 20+ second data transfers at regular interval of 30 minutes spread over several days to account for changing network conditions. From test to test we vary:
+
+\begin{itemize}
+\item The traffic direction - we run both upload and download transfers.
+\item The congestion control - we use Cubic and OLIA/Coupled.
+\item The tunnel combination.
+\end{itemize}
+
+The throughput distribution over the tunnels is analyzed to determine the performance for different combinations while taking into account the underlying network behavior and traffic policies applied by Operator 1.
