--- a/doc/papers/06.2015/src/related.tex
+++ b/doc/papers/06.2015/src/related.tex
@@ -1,6 +1,6 @@
 % vim: set tw=78 sts=2 sw=2 ts=8 aw et ai:
 
-The term \textit{ninja tunneling} is defined by Raiciu et al \cite{goodcop} as a pessimistic approach to solving the content-modifying middlebox problem. This technique consists of creating a dynamic set of tunnels that are invisible to applications and using the tunnels to avoid packets being changed by middleboxes. The tunnels are created between the client device and a cloud machine and MPTCP is used to spread traffic over multiple tunnels by treating each tunnel as a different path. Thanks to MPTCP's congestion control, rate-limiting on certain tunnels will not work - traffic is pushed to the other tunnels. Their experiments with various sets of tunnels revealed that MPTCP behaves well when dealing with UDP and DNS tunnels, achieving 70-95\% of the link's available bandwidth. However, using TCP tunnels in conjuction with UDP will lead MPTCP to push traffic on the less efficient TCP tunnel due to the fact that the TCP tunnel hides losses to the MPTCP congestion controller.
+The term \textit{ninja tunneling} is defined by Raiciu et al. \cite{goodcop} as a pessimistic approach to solving the content-modifying middlebox problem. This technique consists of creating a dynamic set of tunnels that are invisible to applications and using the tunnels to avoid packets being changed by middleboxes. The tunnels are created between the client device and a cloud machine and MPTCP is used to spread traffic over multiple tunnels by treating each tunnel as a different path. Thanks to MPTCP's congestion control, rate-limiting on certain tunnels will not work - traffic is pushed to the other tunnels. Their experiments with various sets of tunnels revealed that MPTCP behaves well when dealing with UDP and DNS tunnels, achieving 70-95\% of the link's available bandwidth. However, using TCP tunnels in conjuction with UDP will lead MPTCP to push traffic on the less efficient TCP tunnel due to the fact that the TCP tunnel hides losses to the MPTCP congestion controller.
 
-MPTCP in conjunction with OpenVPN has also been used by Boccassi et al \cite{binder} to aggregate multiple geographically distributed Internet gateways in community networks. The system they call Binder allows for applications on client devices to benefit from gateway aggregation without requiring modifications themselves. MPTCP subflows are mapped to gateways through added loose source and record routing functionality. Benefits are observed in terms of bandwidth aggregation, load balancing and fault tolerance.
+MPTCP in conjunction with OpenVPN has also been used by Boccassi et al. \cite{binder} to aggregate multiple geographically distributed Internet gateways in community networks. The system they call Binder allows for applications on client devices to benefit from gateway aggregation without requiring modifications themselves. MPTCP subflows are mapped to gateways through added loose source and record routing functionality. Benefits are observed in terms of bandwidth aggregation, load balancing and fault tolerance.
 
