Add iodine results

--- a/doc/papers/06.2015/src/setup.tex
+++ b/doc/papers/06.2015/src/setup.tex
@@ -1,6 +1,6 @@
 % vim: set tw=78 sts=2 sw=2 ts=8 aw et ai:
 
-To determine the extent to which there is a use case for ninja tunneling on mobile devices we have performed an analysis of the four major Romanian mobile operators. We investigated whether packet changing middleboxes exist in their networks and whether traffic shaping is applied per port or per application. Table \ref{table:operators} presents our findings. With regards to the filtering of MPTCP options we have determined that all but one operator (Operator 3) employ packet changing middleboxes that remove the MPTCP options from the TCP header, forcing the endpoints to fallback to TCP. Traffic shaping analysis revealed that all operators use policies that rate-limit traffic on port 53. Since many operators offer DNS traffic free of charge \cite{freedns}, we suspect this is an intentional measure meant to thwart savvy users who would attempt to tunnel all of their traffic on port 53, thus avoiding charges completely. Our tests with an OpenVPN tunnel running on port 53 resulted in packet losses of around 70% on the link for all four operators.
+To determine the extent to which there is a use case for ninja tunneling on mobile devices we have performed an analysis of the four major Romanian mobile operators. We investigated whether packet changing middleboxes exist in their networks and whether traffic shaping is applied per port or per application. Table \ref{table:operators} presents our findings. With regards to the filtering of MPTCP options we have determined that all but one operator (Operator 3) employ packet changing middleboxes that remove the MPTCP options from the TCP header, forcing the endpoints to fallback to TCP. Traffic shaping analysis revealed that all operators use policies that rate-limit traffic on port 53. Since many operators offer DNS traffic free of charge \cite{freedns}, we suspect this is an intentional measure meant to thwart savvy users who would attempt to tunnel all of their traffic on port 53, thus avoiding charges completely. Our tests with an OpenVPN tunnel running on port 53 resulted in packet losses of around 50-70% on the link for all four operators.
 
 Even though Operator 3 does not filter MPTCP in its network, its coverage is the poorest of the four. The throughput values obtained were not viable for our proposed experiments and therefore we have decided to settle on Operator 1. Application analysis for Operator 1 revealed further traffic shaping policies, with Skype calls only working on a data-only subscription - not on voice-plus-data one. Skype calls work for Operators 2, 3 and 4.
 
