add section 4, operator tests

--- a/doc/papers/06.2015/my-report.tex
+++ b/doc/papers/06.2015/my-report.tex
@@ -17,7 +17,7 @@
 % Support for including graphics
 \usepackage{graphicx}
 \DeclareGraphicsExtensions{.pdf,.png,.jpg}
-
+\usepackage{footnote}
 \title{Multipath TCP Ninja Tunneling on Mobile Devices}
 
 \author{Silviu Petria, Silviu Popescu\\
